Fix automatic currency file sync after 24h

Conversion plugin in Krunner depends on automatic refresh of currency
table. std::call_once does not work there, because process is never
stopped.

BUG: 441337