autotests/convertertest.h
@@ -23,6 +23,12 @@ private Q_SLOTS:
     void testConvert();
     void testInvalid();
     void testCurrency();
+    /**
+     * Checks that conversion tables are updated after timeout
+     *
+     * Regression test for https://bugs.kde.org/show_bug.cgi?id=441337
+     */
+    void testCurrencyConversionTableUpdate();
 };
 
 #endif // CONVERTERTEST_H
